<resources>
    <string name="app_name">Edunomics</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_impact">Impact</string>
    <string name="menu_opportunites">Opportunites</string>
    <string name="menu_initiative">Initiative</string>
    <string name="menu_blog">Blogs</string>
    <string name="menu_bot">TRY OUR ALPHA</string>
    <string name="menu_login">Login</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string-array name="career_array">
        <item>Agriculture, Food and Natural Resources</item>
        <item>Education and Training</item>
        <item>Architecture and Construction</item>
        <item>Government and Public Administration</item>
        <item>Health Science</item>
        <item>Hospitality and Tourism</item>
        <item>Human Services</item>
        <item>Information Technology</item>
        <item>Marketing, Sales and Service</item>
        <item>Science, Technology, Engineering and Mathematics</item>
        <item>Law, Public Safety, Corrections and Security</item>
        ...
    </string-array>


    <string-array name="skills_array">
        <item>Active listening</item>
        <item>Communication</item>
        <item>Computer skills</item>
        <item>Customer service</item>
        <item>Singing</item>
        <item>Dancing</item>
        <item>Writing</item>
        <item>Reading</item>
        <item>Problem-solving</item>
        ...
    </string-array>

</resources>
